[project]
name = "Hanzo Studio_CatVTON_Wrapper"
description = "CatVTON warpper for Hanzo Studio"
version = "1.0.0"
license = ""
dependencies = ["numpy", "pillow", "Scipy", "diffusers", "accelerate", "transformers"]

[project.urls]
Repository = "https://github.com/chflame163/Hanzo Studio_CatVTON_Wrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chflame163"
DisplayName = "Hanzo Studio_CatVTON_Wrapper"
Icon = ""
